feat: createdBy and updatedBy in resource & revision (#49)
* feat: createdBy and updatedBy in resource & revision

* feat: update resource proto"
